# otel-lambda

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
infra/terraform/: Makefile  ssm.tf  terraform.tfstate  terraform.tfstate.backup  upside_trifecta.tf
src/: package-lock.json  package.json  simple_lambda.py  upside_trifecta_consumer.py  upside_trifecta_sender.py
