[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Di Huynh <di.huynh179@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
pygithub = { version = "^1.58.2", python = ">=3.7" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
